--- a/assets/css/subPage.css
+++ b/assets/css/subPage.css
@@ -698,6 +698,20 @@ td.company {
   background-color:#fff;
   padding: 10px;
   border: 1px solid #d1d1d1;
+  width:100%;
+  max-height: 240px; 
+  overflow-y: auto;         /* 내부 스크롤 */
+  padding-right: 8px;       /* 스크롤바 때문에 텍스트 잘림 방지 */
+}
+.terms-section + .terms-section {
+  margin-top: 24px;
+}
+.terms-list::-webkit-scrollbar {
+  width: 6px;
+}
+.terms-list::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 3px;
 }
 .terms-list ul li {
   margin-bottom: 5px;
@@ -772,39 +786,7 @@ td.company {
   padding-left: 10px;
 }
 
-
-/* 결제 영역 */
-.payment-box {
-  padding: 20px 0;
-}
-.payment-method {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-  padding: 12px 16px;
-  border: 1px solid #d1d1d1;
-  background-color: #fff;
-  font-size: 18px;
-}
-.payment-method label {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  cursor: pointer;
-}
-.payment-method input[type="radio"] {
-  appearance: auto;
-  -webkit-appearance: auto;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #999;
-  border-radius: 3px;
-  background-color: #fff;
-  cursor: pointer;
-  accent-color: #0055DB; 
-}
-
-/* 결제 버튼 */
+/* 검사시작 */
 .btn-submit {
   display: block;
   margin: 0 auto;
