--- a/assets/css/subPage.css
+++ b/assets/css/subPage.css
@@ -807,3 +807,260 @@ td.company {
   background-color: #AAAAAA;
   cursor: not-allowed;
 }
+
+
+
+/* ================================
+   채용관 상세페이지 - office_info
+================================ */
+.recruit-header {
+    position: sticky;
+    background-color: #F9FAFC;
+    top: 0;
+    z-index: 10;
+    width: 1280px;
+    padding: 30px 0 20px;
+}
+.recruit-header__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.recruit-company-name {
+    font-size: 30px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.recruit-header .btn-outline-primary {
+    border: 2px solid #0055DB;
+    color: #0055DB;
+    font-size: 1.2rem;
+    font-weight: 600;
+    width: 250px;
+    border-radius: 10px;
+}
+.recruit-header .btn-outline-primary:hover {
+    background-color: #fff;
+    color: #0055DB;
+}
+.recruit-header__banner {
+    border-radius: 5px;
+}
+.recruit-header__tab {
+    display: flex;
+    justify-content: space-between;
+}
+.recruit-header__tab .tab-btn {
+    flex: 1;
+    padding: 12px 0;
+    font-size: 16px;
+    font-weight: 500;
+    color: #666;
+    background: #e7eef6;
+    border: none;
+    border-right: 1px solid #cacbcf;
+    border-top: 1px solid #cacbcf;
+    border-bottom: 1px solid #cacbcf;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+.recruit-header__tab .tab-btn:last-child {
+    border-right: none;
+}
+/* hover */
+.recruit-header__tab .tab-btn:hover {
+    background: #0055DB;
+    color: #fff;
+    border: 1px solid #0055DB;
+}
+/* 활성화 */
+.recruit-header__tab .tab-btn.active {
+    background: #0055DB;
+    color: #fff;
+    border: 1px solid #0055DB;
+}
+
+/* 클릭 눌림 느낌 */
+.recruit-header__tab .tab-btn:active {
+    transform: translateY(1px);
+}
+
+
+/* ================================
+   소장채용 카드
+================================ */
+.director-card-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+.director-card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+.director-card {
+    background: #fff;
+    border: 2px solid #0071f3;
+    border-radius: 10px;
+    padding: 18px 20px;
+    transition: all 0.2s ease;
+    position: relative;
+}
+/* hover */
+.director-card:hover {
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    transform: translateY(-4px);
+}
+.director-card__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.director-card__company {
+    font-size: 17px;
+    color: #0055DB;
+    border-radius: 20px;
+    font-weight: 600;
+}
+.director-card__title {
+    font-size: 22px;
+    font-weight: 700;
+    color: #111827;
+    margin-bottom: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.director-card__tags {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 12px;
+    gap: 5px;
+}
+
+.tag {
+    font-size: 14.5px;
+    color: #494949;
+    font-weight: 500;
+}
+.director-card__salary {
+    font-size: 14px;
+    color: #374151;
+    margin-bottom: 16px;
+}
+
+.director-card__salary strong {
+    font-weight: 700;
+    color: #111827;
+}
+.director-card__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.director-card__dday {
+    font-size: 16px;
+    font-weight: 600;
+    color: #e60000;
+}
+
+/* 상세보기 버튼 */
+.director-card__detail {
+    font-size: 14px;
+    font-weight: 600;
+    color: #fff;
+    background: #2563eb;
+    border: none;
+    padding: 8px 30px;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.director-card__detail:hover {
+    background: #1d4ed8;
+}
+
+/* 소장채용 빈 카드 */
+.director-card--empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.director-card__empty {
+    display: flex;
+    flex-direction: column;
+}
+.job-card__img {
+    width: 150px;
+    margin-bottom: 10px;
+}
+.job-card__empty-text {
+    font-weight: 600;
+    font-size: 18px;
+    color: #494949;
+}
+
+
+
+
+/* ================================
+   기업 공지사항 게시판 Wrapper
+================================ */
+.board-wrapper {
+  padding: 0;
+  margin-top: 1.5rem;
+}
+/* 테이블 기본 */
+.board-table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
+  font-size: 15px;
+  color: #222;
+}
+/* ================================
+   헤더
+================================ */
+.board-table thead th {
+  padding: 8px 5px;
+  font-weight: 600;
+  font-size: 18px;
+  border-top: 2px solid #2f61d5;
+  border-bottom: 2px solid #2f61d5;
+}
+/* ================================
+   바디
+================================ */
+.board-table tbody td {
+  padding: 16px 10px;
+  border-bottom: 1px solid #cfcfcf;
+  font-size: 15px;
+}
+/* ================================
+   제목
+================================ */
+.board-title {
+  text-align: center;
+}
+.board-title a {
+  color: #222;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+.board-title a:hover {
+  color: #2f61d5;
+}
+/* ================================
+   hover 효과 (선택)
+================================ */
+.board-table tbody tr:hover {
+  background: #f5f7ff;
+}
