--- a/assets/css/subPage.css
+++ b/assets/css/subPage.css
@@ -1007,7 +1007,12 @@ td.company {
     font-size: 18px;
     color: #494949;
 }
-
+.process-img {
+    text-align: center;
+}
+.process-img img {
+    height: 200px;
+}
 
 
 
